dock: textlint command memo (.bin/review → ./bin/lint)
feat: spellcheck technical word

--- a/.textlintrc
+++ b/.textlintrc
@@ -9,6 +9,7 @@
     "comments": true
   },
   "rules": {
-    "preset-ja-technical-writing": true
+    "preset-ja-technical-writing": true,
+    "spellcheck-tech-word": true
   }
 }
